<resources>
    <string name="app_name">My Favorite User</string>
    <string name="user_name">Fulan si Fulan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="menu_info">Blog User</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="repositori">Repositori</string>
    <string name="country">Country</string>
    <string name="Country">Country</string>
    <string name="location_icon">Location Icon</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
</resources>
