<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ui.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="324dp"
        android:theme="@style/AppTheme.AppBarOverlay">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="450px"
            android:layout_height="450px"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/space_5dp"
            android:elevation="@dimen/space_8dp"
            android:src="@drawable/github" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/space_16dp"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/space_16dp"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/user_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5dp"
                android:maxLines="1"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/Name"/>

            <TextView
                android:id="@+id/user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/user_name_detail"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/space_5dp"
                android:text="@string/Username"/>
            <TextView
                android:id="@+id/user_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/user_username"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/space_5dp"
                android:layout_gravity="center"
                android:text="@string/company"/>
            <TextView
                android:id="@+id/user_repositori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/user_company"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/space_5dp"
                android:layout_gravity="center"
                android:text="@string/repositori"/>
            <ImageView
                android:id="@+id/img_location"
                android:layout_width="65px"
                android:layout_height="65px"
                android:src="@drawable/ic_location"
                app:layout_constraintTop_toBottomOf="@id/user_repositori"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/location_icon"/>
            <TextView
                android:id="@+id/user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_3dp"
                app:layout_constraintTop_toBottomOf="@id/user_repositori"
                app:layout_constraintStart_toEndOf="@id/img_location"
                android:maxLines="1"
                android:text="@string/Country"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="287dp"
        android:layout_marginBottom="@dimen/space_5dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    </androidx.viewpager.widget.ViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>